openturns/1.20/_sources/auto_data_analysis/sample_analysis/index.rst.txt


.. _sphx_glr_auto_data_analysis_sample_analysis:

.. _Sample analysis:

Sample analysis
---------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Draw an histogram">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_visualize_histogram_thumb.png
    :alt: Draw an histogram

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_visualize_histogram.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Draw an histogram</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Draw the empirical CDF">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_visualize_empirical_cdf_thumb.png
    :alt: Draw the empirical CDF

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_visualize_empirical_cdf.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Draw the empirical CDF</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compare unconditional and conditional histograms">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_compare_unconditional_conditional_histograms_thumb.png
    :alt: Compare unconditional and conditional histograms

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_compare_unconditional_conditional_histograms.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compare unconditional and conditional histograms</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute SRC indices confidence intervals">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_src_confidence_thumb.png
    :alt: Compute SRC indices confidence intervals

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_src_confidence.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compute SRC indices confidence intervals</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Draw a survival function">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_draw_survival_thumb.png
    :alt: Draw a survival function

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_draw_survival.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Draw a survival function</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_data_analysis/sample_analysis/plot_visualize_histogram
   /auto_data_analysis/sample_analysis/plot_visualize_empirical_cdf
   /auto_data_analysis/sample_analysis/plot_compare_unconditional_conditional_histograms
   /auto_data_analysis/sample_analysis/plot_src_confidence
   /auto_data_analysis/sample_analysis/plot_draw_survival

