openturns/1.26/_sources/auto_data_analysis/sample_analysis/index.rst.txt


.. _sphx_glr_auto_data_analysis_sample_analysis:

.. _Sample analysis:

Sample analysis
---------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Draw an histogram">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_visualize_histogram_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_visualize_histogram.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Draw an histogram</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Draw the empirical CDF">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_visualize_empirical_cdf_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_visualize_empirical_cdf.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Draw the empirical CDF</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate moments from sample">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_estimate_moments_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_estimate_moments.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate moments from sample</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate quantile confidence intervals">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_quantile_confidence_estimation_thumb.png
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_quantile_confidence_estimation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate quantile confidence intervals</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Build and validate a linear model">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_linear_regression_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_linear_regression.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Build and validate a linear model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compare unconditional and conditional histograms">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_compare_unconditional_conditional_histograms_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_compare_unconditional_conditional_histograms.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compare unconditional and conditional histograms</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate correlation coefficients">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_sample_correlation_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_sample_correlation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate correlation coefficients</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute squared SRC indices confidence intervals">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_src_confidence_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_src_confidence.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compute squared SRC indices confidence intervals</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compare the distribution of quantile estimators">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_quantile_confidence_exact_empirical_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_quantile_confidence_exact_empirical.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compare the distribution of quantile estimators</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Draw a survival function">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_draw_survival_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_draw_survival.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Draw a survival function</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate quantile confidence intervals from chemical process data">

.. only:: html

  .. image:: /auto_data_analysis/sample_analysis/images/thumb/sphx_glr_plot_quantile_confidence_chemical_process_thumb.svg
    :alt:

  :ref:`sphx_glr_auto_data_analysis_sample_analysis_plot_quantile_confidence_chemical_process.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate quantile confidence intervals from chemical process data</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_data_analysis/sample_analysis/plot_visualize_histogram
   /auto_data_analysis/sample_analysis/plot_visualize_empirical_cdf
   /auto_data_analysis/sample_analysis/plot_estimate_moments
   /auto_data_analysis/sample_analysis/plot_quantile_confidence_estimation
   /auto_data_analysis/sample_analysis/plot_linear_regression
   /auto_data_analysis/sample_analysis/plot_compare_unconditional_conditional_histograms
   /auto_data_analysis/sample_analysis/plot_sample_correlation
   /auto_data_analysis/sample_analysis/plot_src_confidence
   /auto_data_analysis/sample_analysis/plot_quantile_confidence_exact_empirical
   /auto_data_analysis/sample_analysis/plot_draw_survival
   /auto_data_analysis/sample_analysis/plot_quantile_confidence_chemical_process

